--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         projectName:
-          - webgl
+          - TurnbaseRPG
           #projectPath:
           #  - test-project
           #unityVersion:
@@ -53,6 +53,7 @@ jobs:
           path: Library
           key: Library-${{ matrix.projectName }}-ubuntu-${{ matrix.targetPlatform }}
           restore-keys: |
+            Library-webgl-ubuntu-
             Library-${{ matrix.projectName }}-ubuntu-
             Library-
             
